Docker, makefile, измененная структура User и Task, проверка паспорта пользователя
