# model/task.go
@@ -1,6 +1,7 @@
 package model
 
 import (
+	"github.com/google/uuid"
 	"gorm.io/datatypes"
 	"gorm.io/gorm"
 	"time"
@@ -8,19 +9,26 @@ import (
 )
 
 type Task struct {
-	gorm.Model  `json:"-"`
-	Description string         `gorm:"type:text" json:"description" example:"Новая задача"`
+	ID          uuid.UUID      `gorm:"primarykey" json:"-"`
+	CreatedAt   time.Time      `json:"-"`
+	UpdatedAt   time.Time      `json:"-"`
+	DeletedAt   gorm.DeletedAt `gorm:"index" json:"-"`
+	Title       string         `gorm:"type:text" json:"title" example:"Новая задача"`
+	Description string         `gorm:"type:text" json:"description" example:"Описание задачи"`
 	StartDate   datatypes.Date `gorm:"not null;" json:"-"`
 	EndDate     datatypes.Date `gorm:"not null;" json:"-"`
 	TotalTime   datatypes.Time `gorm:"not null;" json:"-"`
-	UserID      uint           `gorm:"not null;" json:"-"`
+	UserID      uuid.UUID      `gorm:"not null;" json:"-"`
+}
+
+func (task Task) BeforeCreate(tx *gorm.DB) (err error) {
+	task.ID = uuid.New()
+	return
 }
 
 func (task Task) CountdownStart() (Task, error) {
 	task.StartDate = datatypes.Date(time.Now())
-
-	err := database.Database.Create(&task).Error
-	if err != nil {
+	if err := database.Database.Create(&task).Error; err != nil {
 		return Task{}, err
 	}
 	return task, nil
